<resources>
    <string name="app_name">FirebaseDemo</string>
    <string name="request_button_text">Request</string>
    <string name="crash_button_text">Crash</string>
    <string name="request_message_text_view_text">Request message</string>
    <string name="register_button_text">Register</string>
    <string name="login_button_text">Login</string>
    <string name="enter_your_email_hint">Enter your email</string>
    <string name="enter_your_password_hint">Enter your password</string>
    <string name="failed_operation_toast">Failed to %1$s</string>
    <string name="change_username_button">change username</string>
    <string name="user_not_logged_in_toast">User is not logged in!</string>
    <string name="failed_request_error">Failed request!</string>
    <string name="authentication">Auth</string>
    <string name="crash">Crash</string>
    <string name="request">Request</string>
    <string name="nullpointer_button_text">Nullpointer</string>
    <string name="wrong_reference_error_message">Wrong firebase reference provided!</string>
    <string name="iobounds_button_text">IOBounds</string>
    <string name="classcast_button_text">ClassCast</string>
    <string name="remote">Remote</string>
    <string name="invalid_request_text">Request invalid</string>
    <string name="invalid_request_button">Invalid</string>
    <string name="success_message">Successfully sent a message!</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="send">Send</string>
    <string name="successfully_logged_in">Successfully logged in!</string>
    <string name="db">DB</string>
    <string name="take_a_photo_button">Take a photo</string>
    <string name="upload_photo_button">Upload photo</string>
    <string name="no_photo_to_upload_toast">No photo to upload!</string>
    <string name="storage">Storage</string>
    <string name="successful_upload_toast">Upload successful!</string>
    <string name="item_discount">Item is on %1$f discount.</string>
    <string name="item_is_not_on_discount">Item is not on discount!</string>
    <string name="bad_request_button">Bad request</string>
    <string name="crash_menu">Crash</string>
    <string name="chat_menu">Chat</string>
    <string name="register_menu">Register</string>
    <string name="remote_menu">Remote</string>
    <string name="storage_menu">Storage</string>
    <string name="request_menu">Request</string>
    <string name="welcome_screen_message">Welcome to FirebaseDemo app, swipe the navigation drawer to gain access to features</string>
    <string name="failed_to_upload_image_toast">Failed to upload image.</string>
    <string name="invalid_login_toast_message">Invalid account details.</string>
    <string name="successful_login_toast_message">Successfully logged in!</string>
    <string name="register_activity_title">Register new User</string>
    <string name="choose_username_text_view_message">Choose a username to represent you</string>
    <string name="username_edit_text_hint">e.g. myusername123</string>
    <string name="choose_username_button_text">Choose</string>
    <string name="email_edit_text_hint">e.g. test@test.com</string>
    <string name="password_edit_text_hint">e.g password123</string>
    <string name="invalid_register_toast_message">Email and/or password invalid!</string>
    <string name="successful_register_toast_message">Successfully registered!</string>
    <string name="fields_are_emtpy_toast_message">All fields must be filled in!</string>
    <string name="chat_activity_title">Chat</string>
    <string name="remote_config_activity_title">Remote config</string>
    <string name="request_activity_title">Request</string>
</resources>
