<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity">

    <Button
        android:id="@id/start_crash_activity_button"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/crash_button_text"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout3"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout3"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout3"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@id/start_authentication_activity_button"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/authentication"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout3"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout3"
        app:layout_constraintTop_toBottomOf="@+id/start_crash_activity_button"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@id/start_request_activity_button"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/request"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout3"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout3"
        app:layout_constraintTop_toBottomOf="@+id/start_authentication_activity_button"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@id/start_remote_activity_button"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/remote"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout3"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout3"
        app:layout_constraintTop_toBottomOf="@+id/start_request_activity_button"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@id/start_database_activity_button"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/db"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout3"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout3"
        app:layout_constraintTop_toBottomOf="@+id/start_remote_activity_button" />

    <Button
        android:id="@id/start_storage_activity_button"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/storage"
        app:layout_constraintLeft_toLeftOf="@+id/start_remote_activity_button"
        app:layout_constraintTop_toBottomOf="@+id/start_database_activity_button" />
</android.support.constraint.ConstraintLayout>