<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <EditText
        android:layout_margin="6dp"
        android:id="@id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email_hint"
        android:inputType="textEmailAddress"
        tools:ignore="LabelFor" />

    <EditText
        android:layout_margin="6dp"

        android:id="@id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_password_hint"
        android:inputType="textPassword" />

    <android.support.v7.widget.CardView
        android:layout_margin="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@id/login_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:text="@string/login_button_text" />
    </android.support.v7.widget.CardView>
</LinearLayout>