<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <EditText
        android:id="@id/email_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@id/password_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/enter_your_password_hint"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/email_edit_text"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />


    <Button
        android:id="@id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="51dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="8dp"
        android:text="@string/login_button_text"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/register_button"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@id/register_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="51dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="24dp"
        android:text="@string/register_button_text"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@id/user_text_view"
        android:layout_width="61dp"
        android:layout_height="18dp"
        android:layout_marginBottom="160dp"
        android:layout_marginEnd="88dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        app:layout_constraintRight_toLeftOf="@+id/button_change_username"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <Button
        android:id="@id/button_change_username"
        android:layout_width="107dp"
        android:layout_height="wrap_content"
        android:text="@string/change_username_button"
        app:layout_constraintBottom_toBottomOf="@+id/user_text_view"
        app:layout_constraintRight_toRightOf="@+id/login_button"
        app:layout_constraintTop_toTopOf="@+id/user_text_view" />
</android.support.constraint.ConstraintLayout>