<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@id/button_null_pointer"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nullpointer_button_text"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout5"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout5"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout5" />

    <Button
        android:id="@id/button_out_of_bounds"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/iobounds_button_text"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout5"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout5"
        app:layout_constraintTop_toBottomOf="@+id/button_null_pointer" />

    <Button
        android:id="@id/button_class_cast"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/classcast_button_text"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout5"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout5"
        app:layout_constraintTop_toBottomOf="@+id/button_out_of_bounds" />

    <TextView
        android:id="@id/wrongly_casted_text_view"
        android:layout_width="58dp"
        android:layout_height="16dp"
        android:layout_marginTop="24dp"
        android:text="TextView"
        app:layout_constraintLeft_toLeftOf="@id/button_class_cast"
        app:layout_constraintRight_toRightOf="@id/button_class_cast"
        app:layout_constraintTop_toBottomOf="@id/button_class_cast" />
</android.support.constraint.ConstraintLayout>